# praktikum-mrt-2025

./: .gitignore  AvOStacked.gnuplot  AvOoverlay.gnuplot  CMakeLists.txt  README.md  amcl_path.gnuplot  amcl_path.txt  bu  giodat.gnuplot  multi.gp  odom_path.gnuplot  odom_path.txt  package.xml
launch/: multi.launch
savedPaths/: Example(Odomamcl_path.txt)  Example(Odomodom_path.txt)  ReadMe.md
src/: amcl_nodeGNU.cpp  gio_node.backup1  gio_node.cpp  gio_path.cpp  gio_publishNodeBackup.cpp  odo_nodeGNU.cpp
